templates/tpl_modified_nova/stylesheet.css
/* ... */
textarea#comments { height:120px; background:#fff; }

select {
  font-family: 'Red Hat Display', sans-serif;
  font-size:14px;
  font-weight:400;
  line-height:20px;
  color: #555;
  background-color:#f2f2f2;
  border-color: #d9d9d9;
  border-style: solid;
  border-width: 1px;
  vertical-align: middle;
  padding: 11px 11px 11px 11px;
  border-radius: 4px;
  width:100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;  
  transition: all 0.3s ease-in-out;
  height:44px;
  opacity:0; 
}  
input[type=text], input[type=password], input[type=email], input[type=tel] {
  color: #555;
  background-color:#f2f2f2;
  border-color: #d9d9d9;
  border-style: solid;
  border-width: 1px;
  vertical-align: middle;
  padding: 11px 11px 11px 11px;
  border-radius: 4px;
  width:100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;  
  transition: all 0.3s ease-in-out;
  height:44px;
}

input[type=password] {
  letter-spacing:1px;
}
input[type=text]:hover, input[type=password]:hover, input[type=email]:hover, input[type=tel]:hover, select:hover, textarea:hover {
  background-color:#f2f2f2;
  border-color: #999;
  color: #555;
}
input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, input[type=tel]:focus, select:focus, textarea:focus {
  background-color:#fff;
  border-color: #999;
  color: #333;
  outline: 0 none;
}

.search_input ::-webkit-input-placeholder,
.search_input ::-moz-placeholder, 
.search_input :-ms-input-placeholder,
.search_input :-moz-placeholder, 
.sf_newsletter_input ::-webkit-input-placeholder,
.sf_newsletter_input ::-moz-placeholder,
.sf_newsletter_input :-ms-input-placeholder,
.sf_newsletter_input :-moz-placeholder,
.addquickie_input ::-webkit-input-placeholder, 
.addquickie_input ::-moz-placeholder, 
.addquickie_input :-ms-input-placeholder,
.addquickie_input :-moz-placeholder { 
  color: #666; 
  font-style:italic; 
  line-height:28px;
}

/* 09. END inputs & input layout */


/* 10. START Custom checkbox & radio */
/* custom checkbox */
.cus_check {
  font-size:14px;
  line-height:20px;
  width:100%;
}
.cus_check input[type="checkbox"] {
  position: absolute;
  visibility:hidden;
  opacity: 0;
}
.cus_check input[type="checkbox"] ~ label {
  padding-left: 26px;
  position: relative;
  cursor: pointer;
  display: block;
  margin: 0 0 0px 0;
}
.cus_check input[type="checkbox"] ~ label:before {
  font-family: 'Font Awesome 6 Free';
  content: "\f0c8";
  font-weight:400;
  font-size: 18px;
  line-height:20px;
  position: absolute;
  top: 0px;
  left: 0px;
  color:#666;
  transition: background .15s;
}
.cus_check input[type="checkbox"]:disabled ~ label {
  color: #ccc;
}
.cus_check input[type="checkbox"]:disabled ~ label,
.cus_check input[type="checkbox"]:disabled ~ label:before,
.cus_check input[type="checkbox"]:disabled ~ label:after {
  cursor: not-allowed;
}
.cus_check input[type="checkbox"]:disabled,
.cus_check input[type="checkbox"]:disabled ~ label:before,
.cus_check input[type="checkbox"]:disabled:checked ~ label:before {
  opacity:0.5;
}
.cus_check input[type="checkbox"] ~ label:after {
  font-family: 'Font Awesome 6 Free';
  content: '\f14a';
  font-weight:900;
  font-size: 18px;
  line-height:20px;
  position: absolute;
  top: 0px;
  left: 0px;
  color: #333;
  transition: transform .15s;
  transform: scale(0) rotate(90deg);
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.cus_check input[type="checkbox"]:checked ~ label:after {
  transform: scale(1) rotate(0deg);
}

/* custom radios */
.cus_radio {
  font-size:14px;
  line-height:20px;
  width:100%;
}
.cus_radio input[type="radio"] {
  position: absolute;
  visibility:hidden;
  opacity: 0;
}
.cus_radio input[type="radio"] ~ label {
  padding-left: 26px;
  position: relative;
  cursor: pointer;
  display: block;
  margin: 0 0 0px 0;
}
.cus_radio input[type="radio"] ~ label:before {
  font-family: 'Font Awesome 6 Free';
  content: "\f111";
  font-weight:400;
  font-size: 16px;
  line-height:19px;
  position: absolute;
  top: 0px;
  left:0px;
  color:#666;
  transition: background .15s; 
}  
.cus_radio input[type="radio"]:disabled ~ label {
  color: #ccc;
}
.cus_radio input[type="radio"]:disabled ~ label,
.cus_radio input[type="radio"]:disabled ~ label:before,
.cus_radio input[type="radio"]:disabled ~ label:after {
  cursor: not-allowed;
}
.cus_radio input[type="radio"]:disabled,
.cus_radio input[type="radio"]:disabled ~ label:before,
.cus_radio input[type="radio"]:disabled:checked ~ label:before {
  opacity:0.5;
}
.cus_radio input[type="radio"] ~ label:after {
  font-family: 'Font Awesome 6 Free';
  content: '\f192';
  font-weight:900;
  font-size: 16px;
  line-height:19px;
  position: absolute;
  top: 0px;
  left: 0;
  color: #333;
  transition: transform .15s;
  transform: scale(0) rotate(90deg);
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.cus_radio input[type="radio"]:checked ~ label:after {
  transform: scale(1) rotate(0deg);
}
/* 10. END Custom checkbox & radio */


/* 11. START error, info & success messages */
/* errormessage */
.errormessage {
  position:relative;
  border: none;
  padding: 10px 10px 10px 50px;
  font-size:14px;
  line-height:20px;
  font-weight:400;
  color:#e32828;
  background: #fff3f3;
  margin:5px 0 20px 0;
}
.errormessage.small {
  font-size:13px;
  line-height:18px;
}
.errormessage::before {
  font-family: 'Font Awesome 6 Free';
  font-weight:900;
  content: '\f071';
  position:absolute;
  width:40px;
  top:0px;
  left:0px;
  bottom: 0px;
  font-size:20px;
  line-height:20px; 
  padding: 0px 0px;
  color:#e32828;
  background:rgba(227,40,40,0.1);
  align-items: center;
  justify-content: center;
  display: flex; 
}
.errormessage.small::before {
  line-height:18px; 
}
.errormessage a {
  color:#e32828;
  text-decoration:none;
  border-bottom: 1px solid #e32828; 
}  
/* ... */

